@@ -4,6 +4,10 @@ spring bootのスタンドアローンアプリです。
 Mavenプロジェクトです。   
 
 ## 実行方法
+#### java17以降の場合
+antへのオプションの渡し方がわからないので、   
+`export JAVA_TOOL_OPTIONS='--add-opens=java.base/java.lang=ALL-UNNAMED'`   
+として下さい。
 ### コンパイル
 `mvn compile -Pcompile-least`   
 これは、リソースのコピーとEntityのコンパイルだけをして、genを使えるようにします。
